working on train test procedure

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "70823a07",
+   "id": "036b5515",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20d818fe",
+   "id": "10300771",
    "metadata": {},
    "source": [
     "# Data Check"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e1678514",
+   "id": "2319c73f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "be862bcc",
+   "id": "ff1a99e3",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "84f5a437",
+   "id": "6071f672",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ddcfa4e7",
+   "id": "b2dd1e0f",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2b77b544",
+   "id": "56012fe5",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
      "output_type": "stream",
      "text": [
       "############################################\n",
-      "Test (img)\n",
+      "Test (wav)\n",
       "bassoon: 390\n",
       "cello: 1030\n",
       "clarinet: 945\n",
@@ -187,12 +187,12 @@
     }
    ],
    "source": [
-    "CheckDataset(\"C:/Users/User/GCT634 Final/Sub-URMP/chunk/test\", False, 'img')"
+    "CheckDataset(\"C:/Users/User/GCT634 Final/Sub-URMP/chunk/test\", False, 'wav')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1eb94434",
+   "id": "3c239a2a",
    "metadata": {},
    "source": [
     "# Change File name"
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d0ed19cb",
+   "id": "a62266ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "65cbce6d",
+   "id": "ed186084",
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "970ea77c",
+   "id": "0eceb639",
    "metadata": {},
    "source": [
     "# Dataset and DataLoader"
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "bb17b9f6",
+   "id": "a89e3ce6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a158634f",
+   "id": "be044054",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x271c01ff988>"
+       "<matplotlib.image.AxesImage at 0x2176a37fdc8>"
       ]
      },
      "execution_count": 10,
@@ -462,11 +462,12 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f0ccd8a3",
+   "id": "868eb413",
    "metadata": {},
    "outputs": [],
    "source": [
     "from torch.utils.data.dataset import random_split\n",
+    "\n",
     "def get_dataloader(arg):\n",
     "    imgtransform = torchvision.transforms.Compose([\n",
     "        torchvision.transforms.Resize((256,256)),\n",
@@ -493,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf659c6d",
+   "id": "4d4e883d",
    "metadata": {},
    "source": [
     "# Train / Test Pipeline"
@@ -502,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "271c897c",
+   "id": "32d724dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d177942a",
+   "id": "8199543d",
    "metadata": {},
    "outputs": [
     {
@@ -553,56 +554,107 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0536d73c",
+   "id": "f1f4fde4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import model\n",
+    "\n",
     "def train(args):\n",
+    "    device = 'cuda' if torch.cuda.is_available() and args.gpu else 'cpu'    \n",
+    "    model = OurModel().to(device)\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=args.lr)\n",
     "\n",
-    "    device = 'cuda' if torch.cuda.is_available() and args.gpu else 'cpu'\n",
-    "\n",
-    "    for image, lms, label in train_dataloader:\n",
-    "        image = image.to(device) \n",
-    "        lms = lms.to(device)\n",
-    "        label = label.to(device)\n",
-    "        print(\"image.shape:\",image.shape)\n",
-    "        print(\"chunk.shape:\",lms.shape)\n",
-    "        print(\"label.shape:\",label.shape)\n",
-    "        break\n",
+    "    start_time = time.time()\n",
+    "    \n",
+    "    for epoch in range(epoch, args.epoch):\n",
+    "        _start_time = time.time()  \n",
     "        \n",
-    "    for image, lms, label in valid_dataloader:\n",
-    "        image = image.to(device) \n",
-    "        lms = lms.to(device)\n",
-    "        label = label.to(device)\n",
-    "        print(\"image.shape:\",image.shape)\n",
-    "        print(\"chunk.shape:\",lms.shape)\n",
-    "        print(\"label.shape:\",label.shape)\n",
-    "        break     "
+    "        model.train()         \n",
+    "        for image, lms, label in train_dataloader:\n",
+    "            # Load data to gpu\n",
+    "            image = image.to(device) \n",
+    "            lms = lms.to(device)\n",
+    "            label = label.to(device)\n",
+    "            \n",
+    "            # Feed input into the network, get an output\n",
+    "            result = model(image, lms, label) # example, need to change       \n",
+    "            \n",
+    "            # Compute loss\n",
+    "            loss = model.compute_loss(label, result) # example, need to change\n",
+    "            \n",
+    "            # flush out the previously computed gradient \n",
+    "            optimizer.zero_grad() \n",
+    "            \n",
+    "            # backward the computed loss.             \n",
+    "            loss.backward() \n",
+    "            \n",
+    "            # update the network weights. \n",
+    "            optimizer.step() \n",
+    "            \n",
+    "        t = time.time()-_start_time\n",
+    "        print(f'Epoch {epoch}/{args.epoch} || train loss={loss:.4f} time={t:.3f} secs') \n",
+    "    \n",
+    "        _start_time = time.time()  \n",
+    "        \n",
+    "        model.eval()\n",
+    "        with torch.no_grad():\n",
+    "            val_loss = 0.\n",
+    "            for image, lms, label in valid_dataloader:\n",
+    "                image = image.to(device) \n",
+    "                lms = lms.to(device)\n",
+    "                label = label.to(device)\n",
+    "\n",
+    "                result = model(image, lms, label) \n",
+    "                loss = model.compute_loss(label, result)    \n",
+    "                val_loss += loss.item()*image.shape[0]\n",
+    "                val_num_data += image.shape[0]\n",
+    "\n",
+    "            val_loss /= val_num_data\n",
+    "            \n",
+    "        t = time.time()-_start_time\n",
+    "        print(f'Epoch {epoch}/{args.epoch} || val loss={loss:.4f} time={t:.3f} secs')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "77e5df72",
+   "id": "2bcdc6fd",
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "# train(args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9a2b9713",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test(args):\n",
+    "    print(\"hi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8dce1672",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "image.shape: torch.Size([16, 3, 256, 256])\n",
-      "chunk.shape: torch.Size([16, 128, 44])\n",
-      "label.shape: torch.Size([16])\n",
-      "image.shape: torch.Size([16, 3, 256, 256])\n",
-      "chunk.shape: torch.Size([16, 128, 44])\n",
-      "label.shape: torch.Size([16])\n"
+      "hi\n"
      ]
     }
    ],
    "source": [
-    "train(args)"
+    "test(args)"
    ]
   }
  ],
