--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "036b5515",
    "metadata": {},
    "outputs": [],
@@ -12,10 +12,10 @@
     "from pathlib import Path\n",
     "import time\n",
     "import os\n",
-    "os.environ['KMP_DUPLICATE_LIB_OK']='True'\n",
+    "#os.environ['KMP_DUPLICATE_LIB_OK']='True'\n",
     "\n",
     "import matplotlib\n",
-    "%matplotlib inline\n",
+    "#%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import torchaudio\n",
@@ -24,7 +24,14 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
-    "from torch.utils.data import Dataset, DataLoader"
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "\n",
+    "'''\n",
+    "The file depth must be same\n",
+    "put the path where Sub-URMP folder in Dataset_path variable. \n",
+    "\n",
+    "'''\n",
+    "Dataset_Path = 'C:/Users/VML/ML_final/' # + Sub-URMP/chunk/train"
    ]
   },
   {
@@ -37,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "2319c73f",
    "metadata": {},
    "outputs": [],
@@ -60,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "ff1a99e3",
    "metadata": {},
    "outputs": [
@@ -89,12 +96,12 @@
     }
    ],
    "source": [
-    "CheckDataset(r\"C:\\Users\\VML\\ML_final\\Sub-URMP\\img\\train\", True, 'img')"
+    "CheckDataset(Dataset_Path + r\"Sub-URMP\\img\\train\", True, 'img')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "6071f672",
    "metadata": {},
    "outputs": [
@@ -123,12 +130,12 @@
     }
    ],
    "source": [
-    "CheckDataset(r\"C:\\Users\\VML\\ML_final\\Sub-URMP\\chunk\\train\", True, 'wav')"
+    "CheckDataset(Dataset_Path + r\"Sub-URMP\\chunk\\train\", True, 'wav')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "b2dd1e0f",
    "metadata": {},
    "outputs": [
@@ -157,12 +164,12 @@
     }
    ],
    "source": [
-    "CheckDataset(r\"C:\\Users\\VML\\ML_final\\Sub-URMP\\img\\test\", False, 'img')"
+    "CheckDataset(Dataset_Path + r\"Sub-URMP\\img\\test\", False, 'img')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "56012fe5",
    "metadata": {},
    "outputs": [
@@ -171,24 +178,27 @@
      "output_type": "stream",
      "text": [
       "############################################\n",
-      "Test (wav)\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 3] 지정된 경로를 찾을 수 없습니다: 'C:\\\\Users\\\\VML\\\\ML_final\\\\Sub-URMP\\\\chunk\\\\test'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5684/3796404058.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mCheckDataset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr\"C:\\Users\\VML\\ML_final\\Sub-URMP\\chunk\\test\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'wav'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5684/698313847.py\u001b[0m in \u001b[0;36mCheckDataset\u001b[1;34m(path, train, filetype)\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Test (\"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mfiletype\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\")\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[0mlist\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m     \u001b[0mTotal\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] 지정된 경로를 찾을 수 없습니다: 'C:\\\\Users\\\\VML\\\\ML_final\\\\Sub-URMP\\\\chunk\\\\test'"
+      "Test (wav)\n",
+      "bassoon: 390\n",
+      "cello: 1030\n",
+      "clarinet: 945\n",
+      "double_bass: 1180\n",
+      "flute: 925\n",
+      "horn: 525\n",
+      "oboe: 390\n",
+      "sax: 910\n",
+      "trombone: 805\n",
+      "trumpet: 520\n",
+      "tuba: 525\n",
+      "viola: 485\n",
+      "violin: 945\n",
+      "Total:  9575\n",
+      "############################################\n"
      ]
     }
    ],
    "source": [
-    "CheckDataset(r\"C:\\Users\\VML\\ML_final\\Sub-URMP\\chunk\\test\", False, 'wav')"
+    "CheckDataset(Dataset_Path + r\"Sub-URMP\\chunk\\test\", False, 'wav')"
    ]
   },
   {
@@ -201,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "a62266ea",
    "metadata": {},
    "outputs": [],
@@ -220,30 +230,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "ed186084",
    "metadata": {},
    "outputs": [
     {
      "ename": "FileExistsError",
-     "evalue": "[WinError 183] 파일이 이미 있으므로 만들 수 없습니다: 'C:\\\\Users\\\\VML\\\\ML_final\\\\Sub-URMP\\\\img\\\\train\\\\bassoon\\\\10.jpg' -> 'C:\\\\Users\\\\VML\\\\ML_final\\\\Sub-URMP\\\\img\\\\train\\\\bassoon\\\\2.jpg'",
+     "evalue": "[WinError 183] 파일이 이미 있으므로 만들 수 없습니다: 'C:/Users/VML/ML_final/Sub-URMP\\\\chunk\\\\train\\\\bassoon\\\\10.wav' -> 'C:/Users/VML/ML_final/Sub-URMP\\\\chunk\\\\train\\\\bassoon\\\\2.wav'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5684/3090296626.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m#ChangeFileName(r\"C:\\Users\\VML\\ML_final\\Sub-URMP\\chunk\\train\", 'wav')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#ChangeFileName(r\"C:\\Users\\VML\\ML_final\\Sub-URMP\\chunk\\test\", 'wav')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mChangeFileName\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr\"C:\\Users\\VML\\ML_final\\Sub-URMP\\img\\train\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'jpg'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mChangeFileName\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr\"C:\\Users\\VML\\ML_final\\Sub-URMP\\img\\test\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'jpg'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5684/2042344015.py\u001b[0m in \u001b[0;36mChangeFileName\u001b[1;34m(path, filetype)\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0meachdata\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m             \u001b[1;31m#print(os.path.join(renamepath, eachdata))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m             \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrename\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrenamepath\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0meachdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrenamepath\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0midx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m'.'\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mfiletype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m             \u001b[0midx\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileExistsError\u001b[0m: [WinError 183] 파일이 이미 있으므로 만들 수 없습니다: 'C:\\\\Users\\\\VML\\\\ML_final\\\\Sub-URMP\\\\img\\\\train\\\\bassoon\\\\10.jpg' -> 'C:\\\\Users\\\\VML\\\\ML_final\\\\Sub-URMP\\\\img\\\\train\\\\bassoon\\\\2.jpg'"
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_12444/852364765.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# GCT634 Final --> your directory name\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mChangeFileName\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mDataset_Path\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34mr\"Sub-URMP\\chunk\\train\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'wav'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mChangeFileName\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mDataset_Path\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34mr\"Sub-URMP\\chunk\\test\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'wav'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mChangeFileName\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mDataset_Path\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34mr\"Sub-URMP\\img\\train\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'jpg'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_12444/2042344015.py\u001b[0m in \u001b[0;36mChangeFileName\u001b[1;34m(path, filetype)\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0meachdata\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m             \u001b[1;31m#print(os.path.join(renamepath, eachdata))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m             \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrename\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrenamepath\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0meachdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrenamepath\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0midx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m'.'\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mfiletype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m             \u001b[0midx\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileExistsError\u001b[0m: [WinError 183] 파일이 이미 있으므로 만들 수 없습니다: 'C:/Users/VML/ML_final/Sub-URMP\\\\chunk\\\\train\\\\bassoon\\\\10.wav' -> 'C:/Users/VML/ML_final/Sub-URMP\\\\chunk\\\\train\\\\bassoon\\\\2.wav'"
      ]
     }
    ],
    "source": [
     "# GCT634 Final --> your directory name\n",
     "\n",
-    "ChangeFileName(r\"C:\\Users\\VML\\ML_final\\Sub-URMP\\chunk\\train\", 'wav')\n",
-    "ChangeFileName(r\"C:\\Users\\VML\\ML_final\\Sub-URMP\\chunk\\test\", 'wav')\n",
-    "ChangeFileName(r\"C:\\Users\\VML\\ML_final\\Sub-URMP\\img\\train\", 'jpg')\n",
-    "ChangeFileName(r\"C:\\Users\\VML\\ML_final\\Sub-URMP\\img\\test\", 'jpg')\n"
+    "ChangeFileName(Dataset_Path + r\"Sub-URMP\\chunk\\train\", 'wav')\n",
+    "ChangeFileName(Dataset_Path + r\"Sub-URMP\\chunk\\test\", 'wav')\n",
+    "ChangeFileName(Dataset_Path + r\"Sub-URMP\\img\\train\", 'jpg')\n",
+    "ChangeFileName(Dataset_Path + r\"Sub-URMP\\img\\test\", 'jpg')\n"
    ]
   },
   {
@@ -256,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "a89e3ce6",
    "metadata": {},
    "outputs": [],
@@ -386,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "be044054",
    "metadata": {},
    "outputs": [
@@ -406,13 +416,13 @@
        "'plt.figure()\\nplt.imshow(image_temp.permute(1, 2, 0))\\n\\nplt.figure()\\nplt.imshow(lms_temp)'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_dir = 'C:/Users/VML/ML_final/'\n",
+    "data_dir = Dataset_Path\n",
     "train = True\n",
     "imgtransform = torchvision.transforms.Compose([\n",
     "    torchvision.transforms.Resize((256,256)),\n",
@@ -439,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "868eb413",
    "metadata": {},
    "outputs": [],
@@ -480,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "32d724dd",
    "metadata": {},
    "outputs": [],
@@ -511,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "8199543d",
    "metadata": {},
    "outputs": [
@@ -531,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "f1f4fde4",
    "metadata": {},
    "outputs": [],
@@ -596,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "2bcdc6fd",
    "metadata": {
     "scrolled": true
@@ -608,8 +618,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "id": "9c69a9e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test(args):\n",
+    "    print(\"hi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "311092ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "test(args)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2feb586c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output.shape torch.Size([1, 3, 256, 256])\n",
+      "mean.shape torch.Size([1, 128])\n",
+      "logvar.shape torch.Size([1, 128])\n",
+      "loss 67.41712188720703\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\VML\\Documents\\GitHub\\GCT634-Final-Project\\loss_function.py:6: UserWarning: Using a target size (torch.Size([3, 256, 256])) that is different to the input size (torch.Size([1, 3, 256, 256])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  recons_loss =F.mse_loss(output, input)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import model\n",
+    "VAE = model.Audio2ImageVAE()\n",
+    "output, mean, logvar= VAE(lms_temp)\n",
+    "print(\"output.shape\", output.shape)\n",
+    "print(\"mean.shape\", mean.shape)\n",
+    "print(\"logvar.shape\", logvar.shape)\n",
+    "\n",
+    "import loss_function\n",
+    "loss = loss_function.loss_function(image_temp, output, mean, logvar)\n",
+    "print(\"loss\", loss.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1b27a4e4",
+   "id": "44cfb338",
    "metadata": {},
    "outputs": [],
    "source": []
