--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "036b5515",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2319c73f",
    "metadata": {},
    "outputs": [],
@@ -67,136 +67,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ff1a99e3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "############################################\n",
-      "Train (img)\n",
-      "bassoon: 1735\n",
-      "cello: 9800\n",
-      "clarinet: 8125\n",
-      "double_bass: 1270\n",
-      "flute: 5690\n",
-      "horn: 5540\n",
-      "oboe: 4505\n",
-      "sax: 7615\n",
-      "trombone: 8690\n",
-      "trumpet: 1015\n",
-      "tuba: 3285\n",
-      "viola: 6530\n",
-      "violin: 7430\n",
-      "Total:  71230\n",
-      "############################################\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "CheckDataset(Dataset_Path + r\"Sub-URMP\\img\\train\", True, 'img')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6071f672",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "############################################\n",
-      "Train (wav)\n",
-      "bassoon: 1735\n",
-      "cello: 9800\n",
-      "clarinet: 8125\n",
-      "double_bass: 1270\n",
-      "flute: 5690\n",
-      "horn: 5540\n",
-      "oboe: 4505\n",
-      "sax: 7615\n",
-      "trombone: 8690\n",
-      "trumpet: 1015\n",
-      "tuba: 3285\n",
-      "viola: 6530\n",
-      "violin: 7430\n",
-      "Total:  71230\n",
-      "############################################\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "CheckDataset(Dataset_Path + r\"Sub-URMP\\chunk\\train\", True, 'wav')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b2dd1e0f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "############################################\n",
-      "Test (img)\n",
-      "bassoon: 390\n",
-      "cello: 1030\n",
-      "clarinet: 945\n",
-      "double_bass: 1180\n",
-      "flute: 925\n",
-      "horn: 525\n",
-      "oboe: 390\n",
-      "sax: 910\n",
-      "trombone: 805\n",
-      "trumpet: 520\n",
-      "tuba: 525\n",
-      "viola: 485\n",
-      "violin: 945\n",
-      "Total:  9575\n",
-      "############################################\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "CheckDataset(Dataset_Path + r\"Sub-URMP\\img\\test\", False, 'img')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "56012fe5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "############################################\n",
-      "Test (wav)\n",
-      "bassoon: 390\n",
-      "cello: 1030\n",
-      "clarinet: 945\n",
-      "double_bass: 1180\n",
-      "flute: 925\n",
-      "horn: 525\n",
-      "oboe: 390\n",
-      "sax: 910\n",
-      "trombone: 805\n",
-      "trumpet: 520\n",
-      "tuba: 525\n",
-      "viola: 485\n",
-      "violin: 945\n",
-      "Total:  9575\n",
-      "############################################\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "CheckDataset(Dataset_Path + r\"Sub-URMP\\chunk\\test\", False, 'wav')"
    ]
@@ -211,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "a62266ea",
    "metadata": {},
    "outputs": [],
@@ -230,23 +134,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "ed186084",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileExistsError",
-     "evalue": "[WinError 183] 파일이 이미 있으므로 만들 수 없습니다: 'C:/Users/VML/ML_final/Sub-URMP\\\\chunk\\\\train\\\\bassoon\\\\10.wav' -> 'C:/Users/VML/ML_final/Sub-URMP\\\\chunk\\\\train\\\\bassoon\\\\2.wav'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_12444/852364765.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# GCT634 Final --> your directory name\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mChangeFileName\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mDataset_Path\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34mr\"Sub-URMP\\chunk\\train\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'wav'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mChangeFileName\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mDataset_Path\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34mr\"Sub-URMP\\chunk\\test\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'wav'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mChangeFileName\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mDataset_Path\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34mr\"Sub-URMP\\img\\train\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'jpg'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_12444/2042344015.py\u001b[0m in \u001b[0;36mChangeFileName\u001b[1;34m(path, filetype)\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0meachdata\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m             \u001b[1;31m#print(os.path.join(renamepath, eachdata))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m             \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrename\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrenamepath\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0meachdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrenamepath\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0midx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m'.'\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mfiletype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m             \u001b[0midx\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileExistsError\u001b[0m: [WinError 183] 파일이 이미 있으므로 만들 수 없습니다: 'C:/Users/VML/ML_final/Sub-URMP\\\\chunk\\\\train\\\\bassoon\\\\10.wav' -> 'C:/Users/VML/ML_final/Sub-URMP\\\\chunk\\\\train\\\\bassoon\\\\2.wav'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# GCT634 Final --> your directory name\n",
     "\n",
@@ -266,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "a89e3ce6",
    "metadata": {},
    "outputs": [],
@@ -396,31 +287,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "be044054",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "num data: 71230\n",
-      "image shape: torch.Size([3, 256, 256]) | type: torch.float32\n",
-      "chunk shape: torch.Size([128, 44]) | type: torch.float32\n",
-      "label: tensor(1)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'plt.figure()\\nplt.imshow(image_temp.permute(1, 2, 0))\\n\\nplt.figure()\\nplt.imshow(lms_temp)'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_dir = Dataset_Path\n",
     "train = True\n",
@@ -449,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "868eb413",
    "metadata": {},
    "outputs": [],
@@ -490,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "32d724dd",
    "metadata": {},
    "outputs": [],
@@ -506,7 +376,7 @@
     "args.gpu = True                      \n",
     "\n",
     "# data options\n",
-    "args.dataroot = 'C:/Users/User/GCT634 Final/' \n",
+    "args.dataroot = Dataset_Path\n",
     "args.batch_size = 16              \n",
     "\n",
     "# training options\n",
@@ -521,27 +391,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "8199543d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# of train_dataset: 56984\n",
-      "# of valid_dataset: 14246\n",
-      "# of test_dataset:  9575\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_dataloader, valid_dataloader, test_dataloader = get_dataloader(args)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "id": "67ec6de4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "image, lms, label = next(iter(train_dataloader))\n",
+    "\n",
+    "print(image.shape)\n",
+    "print(lms.shape)\n",
+    "\n",
+    "import model\n",
+    "VAE = model.Audio2ImageVAE()\n",
+    "output, mean, logvar= VAE(lms)\n",
+    "\n",
+    "print(\"output.shape:\",output.shape)\n",
+    "\n",
+    "import loss_function\n",
+    "loss = loss_function.loss_function(image_temp, output, mean, logvar)\n",
+    "print(\"loss\", loss.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f1f4fde4",
    "metadata": {},
    "outputs": [],
@@ -564,6 +448,8 @@
     "            image = image.to(device) \n",
     "            lms = lms.to(device)\n",
     "            label = label.to(device)\n",
+    "            print(image.shape)\n",
+    "            print(lms.shape)\n",
     "            \n",
     "            # Feed input into the network, get an output\n",
     "            result = model(image, lms, label) # example, need to change       \n",
@@ -606,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "2bcdc6fd",
    "metadata": {
     "scrolled": true
@@ -618,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "9c69a9e6",
    "metadata": {},
    "outputs": [],
@@ -629,58 +515,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "311092ec",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hi\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test(args)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "2feb586c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "output.shape torch.Size([1, 3, 256, 256])\n",
-      "mean.shape torch.Size([1, 128])\n",
-      "logvar.shape torch.Size([1, 128])\n",
-      "loss 67.41712188720703\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\VML\\Documents\\GitHub\\GCT634-Final-Project\\loss_function.py:6: UserWarning: Using a target size (torch.Size([3, 256, 256])) that is different to the input size (torch.Size([1, 3, 256, 256])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  recons_loss =F.mse_loss(output, input)\n"
-     ]
-    }
-   ],
-   "source": [
-    "import model\n",
-    "VAE = model.Audio2ImageVAE()\n",
-    "output, mean, logvar= VAE(lms_temp)\n",
-    "print(\"output.shape\", output.shape)\n",
-    "print(\"mean.shape\", mean.shape)\n",
-    "print(\"logvar.shape\", logvar.shape)\n",
-    "\n",
-    "import loss_function\n",
-    "loss = loss_function.loss_function(image_temp, output, mean, logvar)\n",
-    "print(\"loss\", loss.item())"
    ]
   },
   {
