--- a/ForDebug.ipynb
+++ b/ForDebug.ipynb
@@ -1440,13 +1440,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "8738d99a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# torch.save(model.state_dict(), os.path.join(os.getcwd(),'CVAE1201.pth'))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7ad61c4",
+   "metadata": {},
+   "source": [
+    "# Python Run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e046754a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\User\\GCT634 Final\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os \n",
+    "print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "91b2ce81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# of train_dataset: 56984\n",
+      "# of valid_dataset: 14246\n",
+      "# of test_dataset:  9575\n",
+      "[Epoch 1/10] [Train Loss: 0.0000] [Valid Loss: 0.0000]\n",
+      "[Epoch 2/10] [Train Loss: 0.0000] [Valid Loss: 0.0000]\n",
+      "[Epoch 3/10] [Train Loss: 0.0000] [Valid Loss: 0.0000]\n",
+      "[Epoch 4/10] [Train Loss: 0.0000] [Valid Loss: 0.0000]\n",
+      "[Epoch 5/10] [Train Loss: 0.0000] [Valid Loss: 0.0000]\n",
+      "[Epoch 6/10] [Train Loss: 0.0000] [Valid Loss: 0.0000]\n",
+      "[Epoch 7/10] [Train Loss: 0.0000] [Valid Loss: 0.0000]\n",
+      "[Epoch 8/10] [Train Loss: 0.0000] [Valid Loss: 0.0000]\n",
+      "[Epoch 9/10] [Train Loss: 0.0000] [Valid Loss: 0.0000]\n",
+      "[Epoch 10/10] [Train Loss: 0.0000] [Valid Loss: 0.0000]\n",
+      "Execution time: 19.736204862594604\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\User\\anaconda3\\envs\\gct634\\lib\\site-packages\\torch\\nn\\functional.py:718: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  ..\\c10/core/TensorImpl.h:1156.)\n",
+      "  return torch.max_pool2d(input, kernel_size, stride, padding, dilation, ceil_mode)\n",
+      "C:\\Users\\User\\anaconda3\\envs\\gct634\\lib\\site-packages\\torch\\optim\\lr_scheduler.py:628: UserWarning: The epoch parameter in `scheduler.step()` was not necessary and is being deprecated where possible. Please use `scheduler.step()` to step the scheduler. During the deprecation, if epoch is different from None, the closed form is used instead of the new chainable form, where available. Please open an issue if you are unable to replicate your use case: https://github.com/pytorch/pytorch/issues/new/choose.\n",
+      "  warnings.warn(EPOCH_DEPRECATION_WARNING, UserWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "! python train.py --name \"1206_2\" --datasetPath \"C:/Users/User/GCT634 Final/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e6967a75",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 256, 256])\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_temp = torch.randn(3,256,256)\n",
+    "print(input_temp.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84837cae",
+   "metadata": {},
+   "source": [
+    "# Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b261abcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def createFolder(directory):\n",
+    "    try:\n",
+    "        if not os.path.exists(directory):\n",
+    "            os.makedirs(directory)\n",
+    "    except OSError:\n",
+    "        print ('Error: Creating directory. ' +  directory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "68d45c53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Dataset_Path = 'C:/Users/User/GCT634 Final/' # Jiho\n",
+    "instruments = ['bassoon', 'cello', 'clarinet', 'double_bass', 'flute', 'horn', 'oboe', 'sax', 'trombone', 'trumpet', 'tuba', 'viola', 'violin']\n",
+    "#createFolder(Dataset_Path+'/Sub-URMP(processed)/IMG/test')\n",
+    "for instrumentclass in instruments:    \n",
+    "    createFolder(Dataset_Path+'/Sub-URMP(processed)/LMS/train/'+instrumentclass)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "a2be128b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ChangeImageSize(path, filetype):\n",
+    "    instruments = ['bassoon', 'cello', 'clarinet', 'double_bass', 'flute', 'horn', 'oboe', 'sax', 'trombone', 'trumpet', 'tuba', 'viola', 'violin']\n",
+    "    imgtransform = torchvision.transforms.Compose([\n",
+    "        torchvision.transforms.Resize((256,256)),\n",
+    "        torchvision.transforms.ToTensor(),\n",
+    "        ])        \n",
+    "    j = os.listdir(path)\n",
+    "    for instrumentclass in j:\n",
+    "        idx = 1\n",
+    "        i = os.listdir(os.path.join(path,instrumentclass))\n",
+    "        renamepath = os.path.join(path,instrumentclass)\n",
+    "        for eachdata in i:\n",
+    "            image = Image.open(os.path.join(renamepath, eachdata))\n",
+    "            image = imgtransform(image)\n",
+    "            torchvision.utils.save_image(image, Dataset_Path+'/Sub-URMP(processed)/IMG/test/'+instrumentclass+'/'+str(idx)+'.jpg')\n",
+    "            #os.rename(os.path.join(renamepath, eachdata), os.path.join(renamepath, str(idx)+'.'+filetype))\n",
+    "            idx += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "df92fec4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ChangeImageSize(Dataset_Path + r\"Sub-URMP\\img\\test\", 'img')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "fbecc5c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ChangeChunkSize(path, filetype):\n",
+    "    instruments = ['bassoon', 'cello', 'clarinet', 'double_bass', 'flute', 'horn', 'oboe', 'sax', 'trombone', 'trumpet', 'tuba', 'viola', 'violin']\n",
+    "    spec = torchaudio.transforms.MelSpectrogram(sample_rate=44100, n_fft=2048, hop_length=512, f_min=0.0, f_max=8000.0, n_mels=128)\n",
+    "    to_db = torchaudio.transforms.AmplitudeToDB()\n",
+    "    \n",
+    "    j = os.listdir(path)\n",
+    "    for instrumentclass in j:\n",
+    "        idx = 1\n",
+    "        i = os.listdir(os.path.join(path,instrumentclass))\n",
+    "        renamepath = os.path.join(path,instrumentclass)\n",
+    "        for eachdata in i:\n",
+    "            chunk, sr = torchaudio.load(os.path.join(renamepath, eachdata))    \n",
+    "            lms = spec(chunk[0])\n",
+    "            lms = to_db(lms)\n",
+    "            np.save(Dataset_Path+'/Sub-URMP(processed)/LMS/test/'+instrumentclass+'/'+str(idx), lms)\n",
+    "            #os.rename(os.path.join(renamepath, eachdata), os.path.join(renamepath, str(idx)+'.'+filetype))\n",
+    "            idx += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "ee754e85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ChangeChunkSize(Dataset_Path + r\"Sub-URMP\\chunk\\test\", 'wav')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "948b99f6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
